--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -11,6 +11,31 @@ div {
   position: relative;
 }
 
+.loader {
+	position: fixed;
+	left: 0px;
+	right: 0px;
+	top: 0px;
+	bottom: 0px;
+	z-index: 3000;
+	width: 100%;
+	height: 100%;
+	opacity: 0.8;
+	background-color: #ffffff;
+	text-align: center;
+    vertical-align: middle;
+	display: none;
+}
+
+.loader table {
+	width: 100%;
+	height: 100%;
+}
+
+.loader img {
+    vertical-align: middle;
+}
+
 #mapContainer {
 	width: 800px;
 	height: 600px;
@@ -52,6 +77,29 @@ div {
 	height: 100%;
 	background-color: #ffffff;
 	opacity: 0.4;
+}
+
+.controlPanel .pulloutTab {
+	width: 35px;
+	height: 35px;
+	position: absolute;
+	left: 321px;
+	top: 90px;
+	cursor: pointer;
+	border-right: 2px #ffffff ridge;
+	border-top: 2px #ffffff ridge;
+	border-bottom: 2px #ffffff ridge;
+	font-size: 30px;
+	font-weight: bold;
+	margin: 0px;
+	padding: 0px;
+	line-height: 31px;
+	text-align: center;
+	color: #222222;
+}
+
+.controlPanel .pulloutTab .transparency {
+	background-color: #aaaaaa;
 }
 
 .controlPanel .content {
